samples/_failures_safe/1761789545_c3ea2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_762de9f7.c: In function ‘main’:
./samples/SAFE/__tmp_762de9f7.c:124:15: error: expected ‘;’ at end of input
  124 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_762de9f7.c:124:9: error: expected declaration or statement at end of input
  124 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_762de9f7.c:124:9: error: expected declaration or statement at end of input
